--- a/index.html
+++ b/index.html
@@ -2,9 +2,72 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Kevin Slote</title>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "@id": "https://www.kevin-slote.com/#kevin-slote",
+  "name": "Kevin Slote",
+  "givenName": "Kevin",
+  "familyName": "Slote",
+  "jobTitle": "Postdoctoral Researcher in Applied Mathematics",
+  "worksFor": [{
+    "@type": "Organization",
+    "name": "Clarkson Center for Complex Systems Science",
+    "url": "https://www.clarkson.edu"
+  }],
+  "affiliation": [{
+    "@type": "CollegeOrUniversity",
+    "name": "Georgia State University",
+    "url": "https://www.gsu.edu"
+  }],
+  "alumniOf": [{
+    "@type": "CollegeOrUniversity",
+    "name": "Georgia State University"
+  }],
+  "description": "Applied mathematician and data scientist researching topological data analysis, seizure prediction, and generative AI.",
+  "image": "https://static.wixstatic.com/media/eedd5e_dff117e9c3664cdaa3a82d23ffa1915f~mv2.jpg",
+  "url": "https://www.kevin-slote.com/",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://www.kevin-slote.com/"
+  },
+  "identifier": [{
+    "@type": "PropertyValue",
+    "propertyID": "ORCID",
+    "value": "0009-0008-3167-3992",
+    "url": "https://orcid.org/0009-0008-3167-3992"
+  },{
+    "@type": "PropertyValue",
+    "propertyID": "Google Scholar",
+    "value": "Otx9t8IAAAAJ"
+  }],
+  "sameAs": [
+    "https://orcid.org/0009-0008-3167-3992",
+    "https://www.wikidata.org/wiki/Q125511795",
+    "https://scholar.google.com/citations?user=Otx9t8IAAAAJ",
+    "https://phys.org/news/2025-07-mathematicians-reveal-factors-gun-sales.html",
+    "https://academic.oup.com/pnasnexus/article/4/6/pgaf195/8160866",
+    "https://pubmed.ncbi.nlm.nih.gov/40583911/",
+    "https://github.com/kevinslote",
+    "https://www.linkedin.com/in/kevin-slote/",
+    "https://bsky.app/profile/kevinslote.bsky.social"
+  ],
+  "knowsAbout": [
+    "Topological Data Analysis",
+    "Causal Discovery",
+    "Epilepsy Research",
+    "Generative AI",
+    "Nonlinear Dynamics"
+  ]
+}
+    </script>
   </head>
   <body>
     <div id="root"></div>
